really fixed scrollbar this time

--- a/trunk/media/styles/faads-search.css
+++ b/trunk/media/styles/faads-search.css
@@ -252,14 +252,14 @@ table.summary-data .null-value { text-align: center; }
 #summary-container{
 	width: 660px;
 	overflow-x: scroll;
-	overflow-y: visible;
+	overflow-y: hidden;
 	height: 100%;
 }
 
 #state-summary-container{
 	width: 660px;
 	overflow-x: scroll;
-	overflow-y: visible;
+	overflow-y: hidden;
 	height: 100%;
 }
 
